[tool.poetry]
name = "TheBCHPodBot"
version = "0.1.0"
description = ""
authors = ["JettScythe <jettscythe@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = "^21.1"
python-dotenv = "^1.0.0"
pycoingecko = "^3.1.0"
Babel = "^2.11.0"
BitCash = "^0.6.7"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
commitizen = "^4.1.1"
black = {version = "^25.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
